src/scss/base/_base.scss
@use "../utils/" as u;

html {
    box-sizing: border-box;    // Padding and border added to will not alter final width/height set.
    font-size: 100%;    // ensure font size matches to def set on browser.
    scroll-behavior: smooth;
}

// wildcard selector (selects every element), before and after pseudo elements
*, 
*::before, 
*::after {
    box-sizing: inherit;    // from html root element
}

body {
    margin: 0;    // reset rules for different browsers
    padding: 0;    // reset rules for different browsers
    font-family: "Arimo", "Arial";
    background: var(--background-gradient);
    overscroll-behavior-y: none;
    
    &::-webkit-scrollbar {
        background: var(--background-blue);
        width: 10px;
    }

    &::-webkit-scrollbar-thumb {
        background: var(--coral);
        border-radius: 5px;
    }
}

.section {
    margin: 1rem;

    @include u.breakpoint(desktop) {
        padding-top: var(--nav-height);
        margin-top: 0;
        margin-bottom: 1rem;
    }
}

